--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
-sonar.projectKey=RiccardoBuraioli_Just_think_it_finale
-sonar.projectName=Just_think_it_finale
+sonar.projectKey=RiccardoBuraioli__Just_think_it_
+sonar.projectName=_Just_think_it_
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/RiccardoBuraioli/Just_think_it_finale
-sonar.links.ci=https://travis-ci.org/RiccardoBuraioli/Just_think_it_finale
-sonar.links.scm=https://github.com/RiccardoBuraioli/Just_think_it_finale
-sonar.links.issue=https://github.com/RiccardoBuraioli/Just_think_it_finale/issues
+sonar.links.homepage=https://github.com/RiccardoBuraioli/_Just_think_it_
+sonar.links.ci=https://travis-ci.org/RiccardoBuraioli/_Just_think_it_
+sonar.links.scm=https://github.com/RiccardoBuraioli/_Just_think_it_
+sonar.links.issue=https://github.com/RiccardoBuraioli/_Just_think_it_/issues
 
 
 # =====================================================
@@ -16,8 +16,8 @@ sonar.links.issue=https://github.com/RiccardoBuraioli/Just_think_it_finale/issue
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=riccardoburaioli
-sonar.login=1e5a5c29aa0af3ce68e0057162364889926a4f01
+sonar.organization="riccardoburaioli"
+sonar.login="1e5a5c29aa0af3ce68e0057162364889926a4f01"
 sonar.sources=src
 sonar.language=java
 
