--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: java
 jdk: 
     - openjdk8
 script: ant build
+
 addons:
 sonarcloud:
-	organization:riccardoburaioli
-	token:1e5a5c29aa0af3ce68e0057162364889926a4f01
+organization:"riccardoburaioli"
+token:"1e5a5c29aa0af3ce68e0057162364889926a4f01"
 	
 
 script:
