--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,8 +16,8 @@ sonar.links.issue=https://github.com/RiccardoBuraioli/_Just_think_it_/issues
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization="riccardoburaioli"
-sonar.login="1e5a5c29aa0af3ce68e0057162364889926a4f01"
+sonar.organization=riccardoburaioli
+sonar.login=1e5a5c29aa0af3ce68e0057162364889926a4f01
 sonar.sources=src
 sonar.language=java
 
