--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,19 @@ jdk:
 
 
 addons:
-  sonarcloud:
-    organization:"riccardoburaioli"
-    token: "1e5a5c29aa0af3ce68e0057162364889926a4f01"
+sonarcloud:
+organization:"riccardoburaioli"
+token:"1e5a5c29aa0af3ce68e0057162364889926a4f01"
 	
 
+addons:
+  sonarcloud:
+    organization: "riccardoburaioli"
+    token:
+      secure: "**************************" # encrypted value of your token
+
 script:
-- ant build
-- sonar-scanner
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  -ant build
+  -sonar-scanner
