--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
-language: java 
-jdk: 
-    - openjdk8
+language: java
+jdk:
+- openjdk8
+script: ant build
 
-addons:
- sonarcloud:
- organization:"riccardoburaioli"
-  token:"54a421544f4c993c51f5a200ca6adf634f38feec"
-	
-script:
-  -ant build
-  -sonar-scanner
+
