--- a/.classpath
+++ b/.classpath
@@ -4,14 +4,13 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/JustThinkIt/logback-classic-1.2.3.jar"/>
-	<classpathentry kind="lib" path="/JustThinkIt/logback-core-1.2.3.jar"/>
-	<classpathentry kind="lib" path="/JustThinkIt/mapjfx-1.33.2.jar" sourcepath="/JustThinkIt/mapjfx-demo-1.33.2.jar"/>
-	<classpathentry kind="lib" path="/JustThinkIt/mapjfx-demo-1.33.2.jar"/>
-	<classpathentry kind="lib" path="/JustThinkIt/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/C-_Program Files_Apache Software Foundation_Tomcat 9.0_TomcatJust"/>
 	<classpathentry kind="lib" path="C:/Program Files (x86)/MySQL/Connector J 5.1/mysql-connector-java-5.1.49-bin.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
+	<classpathentry kind="lib" path="C:/Users/HP/Desktop/prova/trunk/logback-classic-1.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HP/Desktop/prova/trunk/logback-core-1.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HP/Desktop/prova/trunk/mapjfx-1.33.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HP/Desktop/prova/trunk/mapjfx-demo-1.33.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HP/Desktop/prova/trunk/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
